@@ -1,3 +1,9 @@
+Thu Dec 19 16:02:35 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tao/IORTable/Table_Adapter.cpp:
+          My Dec. 6 fix to ensure resource clean up introduced a regression
+          of bug 2683, this should restore harmony.
+
 Thu Dec 19 13:33:18 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC/config/corba_e_compact.mpb:
